--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
         ============================================================ */
 
         /* =========================================================
-           :root - CSS Variablen
+           :root - Design (CSS Variablen)
         ============================================================ */
         :root {
             --main-color: #d46000;
