--- a/style.css
+++ b/style.css
@@ -9,15 +9,17 @@
            :root - Design (CSS Variablen)
         ============================================================ */
         :root {
-            --main-color: #d46000;
+            --color: 212, 96, 0;
+            --main-color: rgba(var(--color));
+            --backcolor-hover: rgba(var(--color), 0.10);
+            --backcolorgray-hover: rgba(0,0,0,0.10);
             --background-color: #f0f0f0;
             --main-back: var(--background-color);
             --text-color: #000000;
             --text-color-hover: white;
-            --border-radius: 5px;
+            --border-radius: 6px;
             --border: 1px solid #94949490;
             --color-hover: rgba(0, 0, 0, 0.20);
-            --backcolor-hover: rgba(0, 0, 0, 0.10);
             --box-shadow: 2px 2px 10px rgba(0,0,0,0.15);
             --overview-width: 250px;
             --header-height: 60px;
@@ -27,11 +29,13 @@
 
         /* Dunkelmodus Theme */
         [data-theme="dark"] {
+            --color: 150, 100, 0;
+            --main-color: rgba(var(--color));
+            --backcolor-hover: rgba(var(--color), 0.10);
             --background-color: #303030;
             --main-back: var(--background-color);
             --text-color: #ffffff;
             --border: 1px solid #00000090;
-            --main-color: #ca6c00;
             --box-shadow: 2px 2px 10px rgba(0,0,0,0.15);
         }
 
@@ -121,7 +125,7 @@
             overflow: auto;
             min-height: 0;
             display: flex;
-            background-color: var(--backcolor-hover);
+            background-color: var(--backcolorgray-hover);
         }
 
         .window-content iframe {
@@ -146,6 +150,7 @@
            window-button Styles
         ============================================================ */
         .window-button, .window-close{
+            border-radius: var(--border-radius);
             background-color: transparent;
             border: none;
             color: var(--text-color);
@@ -171,14 +176,13 @@
         }
 
         .window-button:hover {
+            color: var(--main-color);
             background-color: var(--backcolor-hover);
-            border-radius: var(--border-radius);
         }
 
         .window-close:hover {
             color: white;
             background-color: var(--main-color);
-            border-radius: var(--border-radius);
         }
 
         /* =========================================================
@@ -311,9 +315,8 @@
 
         .dropdown button:hover,
         .dropdown a:hover {
-            color: white;
             border-radius: var(--border-radius);
-            background-color: var(--main-color);
+            background-color: var(--backcolor-hover);
         }
 
         /* Hier ist die angepasste Regel, um das Dropdown-Menü anzuzeigen, wenn über das Icon gehovert wird */
@@ -393,7 +396,7 @@
         }
 
         .button-back, .login-button {
-            background-color: var(--backcolor-hover);
+            background-color: var(--backcolorgray-hover);
             border: var(--border);
             color: var(--text-color);
             padding: 8px 12px;
@@ -405,11 +408,12 @@
 
         .login-button {
             margin-left: 10px;
+            background-color: var(--backcolorgray-hover);
         }
 
         .login-button:hover {
-            background-color: var(--main-color);
-            color: white;
+            background-color: var(--backcolor-hover);
+            color: var(--main-color);
         }
 
         /* Zoom Dropdown Styles */
@@ -451,7 +455,7 @@
 
         .zoom-option:hover {
             background-color: var(--main-color);
-            color: #ffffff;
+            color: var(--main-color);
         }
 
         .custom-zoom {
@@ -539,6 +543,7 @@
         }
 
         details summary:hover {
+            color: var(--main-color);
             background-color: var(--backcolor-hover);
         }
 
@@ -575,7 +580,7 @@
         }
 
         .panel-header a:hover{
-            color: var(--text-color);
+            color: var(--main-color);
             background-color: transparent;
         }
 
@@ -594,7 +599,7 @@
         }
 
         .panel-header:hover button{
-            color: var(--text-color);
+            color: var(--main-color);
             background-color: transparent;
         }
 
@@ -615,11 +620,11 @@
         }
 
         .panel-header:hover .icon svg{
-            stroke: var(--text-color);
+            stroke: var(--main-color);
         }
 
         .panel-header:hover .icon {
-            color: var(--text-color);
+            color: var(--main-color);
         }
 
 
@@ -641,10 +646,11 @@
         }
 
         .panel-content {
-            font-size: smaller;
+            font-size: x-small;
             padding: 10px;
             display: none;
             border-radius: var(--border-radius);
+            background-color: var(--backcolorgray-hover);
         }
 
         .panel.open .panel-content {
