--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
             --backcolor-hover: rgba(var(--color), 0.10);
             --backcolorgray-hover: rgba(0,0,0,0.10);
             --background-color: #f0f0f0;
+            --background-color: #ffffff;
             --main-back: var(--background-color);
             --text-color: #000000;
             --text-color-hover: white;
@@ -21,7 +22,7 @@
             --border: 1px solid #94949490;
             --color-hover: rgba(0, 0, 0, 0.20);
             --box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
-            --overview-width: 250px;
+            --overview-width: 300px;
             --header-height: 60px;
             --padding: 5px;
             --padding-button: 6px 10px;
@@ -332,8 +333,7 @@
 
         svg {
             stroke: var(--text-color);
-            width: 16px;
-            height: 16px;
+
         }
 
         /* =========================================================
@@ -348,7 +348,7 @@
             border-bottom: var(--border);
             background-color: var(--background-color);
             color: var(--text-color);
-            box-shadow: var(--box-shadow);
+
         }
 
         .navbar {
@@ -389,10 +389,26 @@
             transition: background-color 0.2s, color 0.2s;
             font-size: 14px;
             background-color: transparent;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+        }
+
+        header button p{
+            margin: 0;
+            margin-left: var(--padding);
+        }
+
+        header svg {
+            height: 18px;
+            width: 18px;
         }
 
         header button:hover {
             color: var(--main-color);
+            background-color: var(--backcolor-hover);
+            border-radius: var(--border-radius);
         }
 
         .button-back, .login-button {
@@ -483,8 +499,11 @@
             position: absolute;
             top: 0;
             width: 50%;
+            margin: calc(var(--padding)*2);
             height: 100%;
-            background-color: rgba(0, 0, 255, 0.2); /* Blaues halbtransparentes Overlay */
+            background-color: var(--backcolor-hover); 
+            border: var(--border);
+            border-radius: var(--border-radius);
             z-index: 1000;
             pointer-events: none;
             display: none;
@@ -497,16 +516,14 @@
         #right-snap-overlay {
             right: 0;
         }
-
-        #top-snap-overlay {
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 255, 0.2);
-        }
+        
         .dropdown .overview {
             width: var(--overview-width);
+        }
+
+        .overview svg {
+            stroke: var(--text-color);
+            margin-left: calc(var(--padding)*2);
         }
 
         .overview {
@@ -524,6 +541,7 @@
         .overview button,
         .overview a {
             padding: var(--padding-button);
+            padding-left: 0;
             border-radius: var(--border-radius);
             background: none;
             border: none;
@@ -532,6 +550,8 @@
             width: 100%;
             color: var(--text-color);
             text-decoration: none;
+            display: flex;
+            align-items: center;
         }
 
         details summary {
@@ -617,6 +637,7 @@
 
         .panel-header .icon svg{
             stroke: transparent;
+            margin-left: 0;
         }
 
         .panel-header:hover .icon svg{
