--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
             --text-color: #000000;
             --text-color-hover: white;
             --border-radius: 6px;
-            --border: 1px solid #94949490;
+            --border: 1px solid #b0b0b090;
             --color-hover: rgba(0, 0, 0, 0.20);
             --box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
             --overview-width: 300px;
@@ -123,18 +123,9 @@
 
         .window-content {
             flex: 1;
-            overflow: auto;
             min-height: 0;
             display: flex;
             background-color: var(--backcolorgray-hover);
-        }
-
-        .window-content iframe {
-            flex: 1;
-            width: 100%;
-            height: 100%;
-            box-sizing: border-box;
-            border: none;
         }
 
         .resize-handle {
@@ -190,15 +181,16 @@
            Taskleiste Styles
         ============================================================ */
         .taskbar {
+            border: var(--border);
+            z-index: 1000;
             display: flex;
             align-items: center;
-            border: var(--border);
             box-sizing: border-box;
-            z-index: 1000;
             overflow-x: auto;
             white-space: nowrap;
-            height: 40px;
-            background-color: var(--background-color);
+            height: 100%; /* Passt sich der Höhe des Footers an */
+            height: 40px; /* Gleiche Höhe wie die Taskleiste */
+            padding: 5px;
         }
 
         .taskbar .task {
@@ -369,8 +361,10 @@
         }
 
         .bild img {
-            height: 40px;
-            padding: 0 15px
+            height: 30px;
+            padding: 0 calc(var(--padding)*2);
+            align-items: center; 
+            display: flex;
         }
 
         .sidebar {
@@ -612,6 +606,7 @@
             border-radius: var(--border-radius) 0 0 var(--border-radius);
             color: var(--text-color);
             font-size: large;
+            justify-content: left;
         }
 
         .panel-header:hover {
@@ -699,15 +694,61 @@
             height: calc(100vh - var(--header-height) - 30px);
         }
 
-        /* Taskleiste anpassen */
-        .taskbar {
-            display: flex;
-            align-items: center;
-            box-sizing: border-box;
-            overflow-x: auto;
-            white-space: nowrap;
-            height: 100%; /* Passt sich der Höhe des Footers an */
-            background-color: var(--background-color);
-            height: 40px; /* Gleiche Höhe wie die Taskleiste */
-            padding: 5px;
+        main,
+        footer {
+            background-color: var(--backcolorgray-hover);
         }
+
+        /* =========================================================
+        Iframe Loader Animation
+        ============================================================ */
+
+        .iframe-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        .iframe-container iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            box-sizing: border-box;
+        }
+
+        .loader {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /*background-color: rgba(255, 255, 255, 0.8);*/
+            z-index: 1;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .loader .progress-bar {
+            width: 50%;
+            height: 5px;
+            background-color: var(--backcolor-hover);
+            border-radius: var(--border-radius);
+            overflow: hidden;
+            position: relative;
+        }
+
+        .loader .progress-bar-inner {
+            width: 0;
+            height: 100%;
+            background-color: var(--main-color);
+            animation: loadProgress 3s linear infinite;
+        }
+
+        @keyframes loadProgress {
+            0% { width: 0; }
+            100% { width: 100%; }
+        }
+
