--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@
             --color: 212, 96, 0;
             --main-color: rgba(var(--color));
             --backcolor-hover: rgba(var(--color), 0.10);
-            --backcolorgray-hover: rgba(0,0,0,0.10);
-            --background-color: #f0f0f0;
+            --backcolorgray-hover: rgba(0,0,0,0.05);
             --background-color: #ffffff;
             --main-back: var(--background-color);
             --text-color: #000000;
@@ -565,6 +564,12 @@
             display: none;
         }
 
+        .overview details {
+            margin: var(--padding);
+            border-radius: var(--border-radius);
+            background-color: var(--backcolorgray-hover);
+        }
+
         /* Dreieck ans Ende setzen nur für verschachtelte Details */
         .overview details details summary::after {
             content: '>';
@@ -582,7 +587,7 @@
         }
 
         .panel {
-            margin-left: var(--padding);
+            margin: var(--padding);
             overflow: hidden;
         }
 
@@ -627,7 +632,7 @@
             justify-content: center;
             cursor: pointer;
             background-color: transparent;
-            border-left: 1px solid var(--background-color);
+            border-left: 1px solid transparent;
         }
 
         .panel-header .icon svg{
@@ -641,6 +646,7 @@
 
         .panel-header:hover .icon {
             color: var(--main-color);
+            border-left: 1px solid var(--background-color);
         }
 
 
