--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@
             --main-back: var(--background-color);
             --text-color: #000000;
             --text-color-hover: white;
-            --border-radius: 6px;
+            --border-radius: 0.3rem;
             --border: 1px solid #b0b0b090;
             --color-hover: rgba(0, 0, 0, 0.20);
             --box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
             --overview-width: 300px;
             --header-height: 60px;
-            --padding: 5px;
-            --padding-button: 6px 10px;
+            --padding: 8px;
+            --backdrop-filter: blur(3px);
         }
 
         /* Dunkelmodus Theme */
@@ -113,6 +113,11 @@
             justify-content: space-between;
             align-items: center;
             user-select: none;
+            backdrop-filter: var(--backdrop-filter);
+        }
+
+        .window-header a:hover {
+            color: var(--main-color);
         }
 
         .window-header .buttons {
@@ -187,9 +192,8 @@
             box-sizing: border-box;
             overflow-x: auto;
             white-space: nowrap;
-            height: 100%; /* Passt sich der Höhe des Footers an */
-            height: 40px; /* Gleiche Höhe wie die Taskleiste */
             padding: 5px;
+            height: 50px;
         }
 
         .taskbar .task {
@@ -248,9 +252,8 @@
 
         li a, li button {
             display: block;
-            padding: 14px 20px;
+            padding: var(--padding);
             text-decoration: none;
-            background: none;
             border: none;
             cursor: pointer;
             font: inherit;
@@ -260,7 +263,7 @@
         .dropdown,
         .dropdown-right,
         .dropdown-left {
-            /* Ihre gemeinsamen Dropdown-Stile */
+            display: flex;
             border-radius: var(--border-radius);
             border: var(--border);
             display: none;
@@ -300,7 +303,7 @@
 
         .dropdown li a,
         .dropdown li button {
-            padding: 6px 10px;
+            padding: var(--padding);
             font-size: 13px;
             color: var(--text-color);
         }
@@ -334,7 +337,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0 20px;
+            padding: 10px;
             height: 50px;
             border-bottom: var(--border);
             background-color: var(--background-color);
@@ -360,8 +363,8 @@
         }
 
         .bild img {
-            height: 30px;
-            padding: 0 calc(var(--padding)*2);
+            height: 25px;
+            padding: var(--padding);
             align-items: center; 
             display: flex;
         }
@@ -369,14 +372,13 @@
         .sidebar {
             color: var(--text-color);
             display: flex;
-            gap: 10px;
+            gap: 20px;
             align-items: center;
         }
 
         header button {
-            padding: 8px 12px;
             border: none;
-            border-radius: 4px;
+            border-radius: var(--border-radius);
             color: var(--text-color);
             cursor: pointer;
             transition: background-color 0.2s, color 0.2s;
@@ -401,7 +403,6 @@
         header button:hover {
             color: var(--main-color);
             background-color: var(--backcolor-hover);
-            border-radius: var(--border-radius);
         }
 
         .button-back, .login-button {
@@ -409,7 +410,7 @@
             border: var(--border);
             color: var(--text-color);
             padding: 8px 12px;
-            border-radius: 4px;
+            border-radius: var(--border-radius);
             cursor: pointer;
             font-size: 14px;
             transition: background-color 0.2s, color 0.2s;
@@ -483,7 +484,7 @@
             padding: 5px;
             margin-bottom: 5px;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: var(--border-radius);
             width: 100%;
             box-sizing: border-box;
         }
@@ -587,7 +588,7 @@
         }
 
         .panel {
-            margin: var(--padding);
+            padding: 0 var(--padding) var(--padding) var(--padding);
             overflow: hidden;
         }
 
@@ -689,7 +690,7 @@
         footer {
             position: fixed;
             width: 100%;
-            height: 40px; /* Gleiche Höhe wie die Taskleiste */
+            height: 50px; /* Gleiche Höhe wie die Taskleiste */
             z-index: 1000;
         }
 
@@ -697,7 +698,7 @@
         main {
             position: relative;
             overflow: hidden;
-            height: calc(100vh - var(--header-height) - 30px);
+            height: calc(100vh - var(--header-height) - 60px);
         }
 
         main,
@@ -729,12 +730,30 @@
             right: 0;
             bottom: 0;
             display: flex;
+            flex-direction: column; /* Elemente vertikal anordnen */
             justify-content: center;
             align-items: center;
-            /*background-color: rgba(255, 255, 255, 0.8);*/
+            background-color: rgba(255, 255, 255, 0.9);
             z-index: 1;
             font-size: 20px;
             font-weight: bold;
+            gap: 10px;
+            backdrop-filter: var(--backdrop-filter);
+        }
+
+        .loader button {
+            border: none;
+            padding: var(--padding);
+            border-radius: var(--border-radius);
+            color: var(--main-color);
+            background-color: var(--backcolor-hover);
+            opacity: 0.3;
+        }
+
+        .loader button:hover {
+            color: var(--main-color);
+            background-color: var(--backcolor-hover);
+            opacity: 1;
         }
 
         .loader .progress-bar {
@@ -749,6 +768,7 @@
         .loader .progress-bar-inner {
             width: 0;
             height: 100%;
+            border-radius: var(--border-radius);
             background-color: var(--main-color);
             animation: loadProgress 3s linear infinite;
         }
