--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
             --overview-width: 300px;
             --header-height: 60px;
             --padding: 8px;
-            --backdrop-filter: blur(3px);
+            --backdrop-filter: blur(25px);
         }
 
         /* Dunkelmodus Theme */
@@ -294,6 +294,7 @@
             flex-direction: column;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             padding: 5px;
+            backdrop-filter: var(--backdrop-filter);
         }
 
         /* Anzeigen von Untermenüs nach links */
@@ -544,6 +545,7 @@
             padding: 0;
             width: var(--overview-width);
             list-style-type: none;
+            backdrop-filter: var(--backdrop-filter);
         }
 
         .overview ul {
@@ -758,7 +760,7 @@
             font-size: 20px;
             font-weight: bold;
             gap: 10px;
-            backdrop-filter: var(--backdrop-filter);
+            backdrop-filter: blur(3px);
         }
 
         .loader button {
